--- a/Códigos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb
+++ b/Códigos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb
@@ -8,18 +8,7 @@
      "groupValue": "1"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.1\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "/usr/lib/python3/dist-packages/pkg_resources/__init__.py:116: PkgResourcesDeprecationWarning: 1.1build1 is an invalid version and will not be supported in a future release\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Python Default \n",
     "\n",
@@ -83,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -1435,9 +1424,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<string>:1: DeprecationWarning: Option approximation=False is deprecated as of qiskit-aer 0.13. It will be removed no earlier than 3 months after the release date. Instead, use BackendEstimator from qiskit.primitives.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'FakePerth' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Gtortoretto/Documents/IC/Computacao Quantica/Git/Quantum-Computing/Códigos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb Cell 29\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m intervalo_total \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate(((intervalo \u001b[39m:=\u001b[39m np\u001b[39m.\u001b[39mconcatenate(((intervalo_importante \u001b[39m:=\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m0.1\u001b[39m, (end \u001b[39m:=\u001b[39m \u001b[39m1.5\u001b[39m), \u001b[39m15\u001b[39m)), np\u001b[39m.\u001b[39mlinspace(end, \u001b[39m3\u001b[39m, \u001b[39m10\u001b[39m)))), (intervalo_distante \u001b[39m:=\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m20\u001b[39m, \u001b[39m30\u001b[39m, \u001b[39m10\u001b[39m))))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m (metodos \u001b[39m:=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mFakePerth\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mFakeLagosV2\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mFakeNairobiV2\u001b[39m\u001b[39m'\u001b[39m]):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     exec(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39menergia_Estimator_Aer_intervalo_\u001b[39;49m\u001b[39m{\u001b[39;49;00ma\u001b[39m}\u001b[39;49;00m\u001b[39m = np.fromiter((groundstate := GroundState_H2()).groundstate_curve(intervalo, solver = lambda : Solver(groundstate, estimator = Estimator_Aer).Ansatz().Estimator(shots = None, noise = \u001b[39;49m\u001b[39m{\u001b[39;49;00ma\u001b[39m}\u001b[39;49;00m\u001b[39m).Vqe()), float) - np.polyfit(intervalo_distante, list((groundstate := GroundState_H2()).groundstate_curve(intervalo_distante, solver = lambda : Solver(groundstate, estimator = Estimator_Aer).Ansatz().Estimator(shots = 5000, noise = \u001b[39;49m\u001b[39m{\u001b[39;49;00ma\u001b[39m}\u001b[39;49;00m\u001b[39m).Vqe())), 0)\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     exec(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcoef_Estimator_Aer_intervalo_\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m = np.polyfit(intervalo, energia_Estimator_Aer_intervalo_\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m, 12)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     exec(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcoef_Estimator_Aer_intervalo_importante_\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m = np.polyfit(intervalo_importante, (energia_Estimator_Aer_intervalo_importante_\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m := energia_Estimator_Aer_intervalo_\u001b[39m\u001b[39m{\u001b[39;00ma\u001b[39m}\u001b[39;00m\u001b[39m[:len(intervalo_importante)]), 12)\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m<string>:1\u001b[0m\n",
+      "\u001b[1;32m/Users/Gtortoretto/Documents/IC/Computacao Quantica/Git/Quantum-Computing/Códigos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb Cell 29\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgroundstate_curve\u001b[39m(\u001b[39mself\u001b[39m, a, mapper \u001b[39m=\u001b[39m JordanWignerMapper(), solver \u001b[39m=\u001b[39m NumPyMinimumEigensolver) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39miter\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m     \u001b[39mfor\u001b[39;00m dist \u001b[39min\u001b[39;00m a:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m         \u001b[39myield\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgroundstate(dist, mapper, solver)\n",
+      "\u001b[1;32m/Users/Gtortoretto/Documents/IC/Computacao Quantica/Git/Quantum-Computing/Códigos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb Cell 29\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dist \u001b[39m=\u001b[39m a\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_problem \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mproblem(a)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/Gtortoretto/Documents/IC/Computacao%20Quantica/Git/Quantum-Computing/C%C3%B3digos/Gabriel/GroundState2/qiskit_groudstate_2.ipynb#X40sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m \u001b[39mreturn\u001b[39;00m (result \u001b[39m:=\u001b[39m GroundStateEigensolver(mapper, solver())\u001b[39m.\u001b[39msolve(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_problem))\u001b[39m.\u001b[39mgroundenergy \u001b[39m+\u001b[39m result\u001b[39m.\u001b[39mnuclear_repulsion_energy\n",
+      "File \u001b[0;32m<string>:1\u001b[0m, in \u001b[0;36m<lambda>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'FakePerth' is not defined"
+     ]
+    }
+   ],
    "source": [
     "intervalo_total = np.concatenate(((intervalo := np.concatenate(((intervalo_importante := np.linspace(0.1, (end := 1.5), 15)), np.linspace(end, 3, 10)))), (intervalo_distante := np.linspace(20, 30, 10))))\n",
     "\n",
@@ -1548,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
