--- a/AWS/Gabriel/Examples/Qiskit_Braket_Provider.ipynb
+++ b/AWS/Gabriel/Examples/Qiskit_Braket_Provider.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'aux_operators_evaluated': None,\n",
+      "    'cost_function_evals': 9,\n",
+      "    'eigenvalue': -0.8843449957897898,\n",
+      "    'optimal_circuit': <qiskit.circuit.library.n_local.two_local.TwoLocal object at 0x7f2d213a1b50>,\n",
+      "    'optimal_parameters': {   ParameterVectorElement(θ[4]): -0.25340941221388125,\n",
+      "                              ParameterVectorElement(θ[6]): 3.9906034661904695,\n",
+      "                              ParameterVectorElement(θ[5]): 5.511754547726319,\n",
+      "                              ParameterVectorElement(θ[7]): 6.008696291194601,\n",
+      "                              ParameterVectorElement(θ[2]): 0.7520084432656535,\n",
+      "                              ParameterVectorElement(θ[3]): 3.1460188407342056,\n",
+      "                              ParameterVectorElement(θ[1]): -5.608890017191387,\n",
+      "                              ParameterVectorElement(θ[0]): 5.776568541231013},\n",
+      "    'optimal_point': array([ 5.77656854, -5.60889002,  0.75200844,  3.14601884, -0.25340941,\n",
+      "        5.51175455,  3.99060347,  6.00869629]),\n",
+      "    'optimal_value': -0.8843449957897898,\n",
+      "    'optimizer_evals': None,\n",
+      "    'optimizer_result': <qiskit_algorithms.optimizers.optimizer.OptimizerResult object at 0x7f2d24aa0350>,\n",
+      "    'optimizer_time': 0.7470016479492188}\n"
+     ]
+    }
+   ],
    "source": [
     "local_simulator = BraketLocalBackend()\n",
     "\n",
@@ -49,6 +74,36 @@
     "result = vqe.compute_minimum_eigenvalue(H2_op)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantum Task Summary\n",
+      "{}\n",
+      "Note: Charges shown are estimates based on your Amazon Braket simulator and quantum processing unit (QPU) task usage. Estimated charges shown may differ from your actual charges. Estimated charges do not factor in any discounts or credits, and you may experience additional charges based on your use of other services such as Amazon Elastic Compute Cloud (Amazon EC2).\n",
+      "Estimated cost to run this example: 0.00 USD\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Quantum Task Summary\")\n",
+    "print(t.quantum_tasks_statistics())\n",
+    "print('Note: Charges shown are estimates based on your Amazon Braket simulator and quantum processing unit (QPU) task usage. Estimated charges shown may differ from your actual charges. Estimated charges do not factor in any discounts or credits, and you may experience additional charges based on your use of other services such as Amazon Elastic Compute Cloud (Amazon EC2).')\n",
+    "print(f\"Estimated cost to run this example: {t.qpu_tasks_cost() + t.simulator_tasks_cost():.2f} USD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
