--- a/AWS/Gabriel/GroundState5/main.ipynb
+++ b/AWS/Gabriel/GroundState5/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,13 @@
     "import pickle\n",
     "import time\n",
     "import random\n",
+    "import os\n",
+    "import inspect\n",
+    "import pathlib\n",
     "\n",
     "#Essentials\n",
     "\n",
+    "import IPython\n",
     "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
@@ -106,16 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Backends\n",
+    "\n",
     "provider = BraketProvider()\n",
     "local_simulator = BraketLocalBackend()\n",
     "sv1 = provider.get_backend(\"SV1\")\n",
     "aria = provider.get_backend(\"Aria 1\")\n",
     "harmony = provider.get_backend(\"Harmony\")\n",
     "statevector_simulator = StatevectorSimulator()\n",
+    "\n",
+    "# Setup inicial do problema\n",
     "\n",
     "driver = PySCFDriver(\n",
     "    atom= f\"H 0 0 0; H 0 0 1\",\n",
@@ -152,7 +160,11 @@
     "\n",
     "minimum_eigenvalue = vqe_solver.compute_minimum_eigenvalue(calc.get_qubit_operators(es_problem)[0])\n",
     "\n",
+    "# Criando Circuito Aria - AWS\n",
+    "\n",
     "circuito = transpile(minimum_eigenvalue.optimal_circuit.decompose().assign_parameters(minimum_eigenvalue.optimal_parameters), aria)\n",
+    "\n",
+    "# Criando Circuito Brisbane - IBM\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(\"ibm_brisbane\")\n",
@@ -187,19 +199,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_current_directory():\n",
+    "    try:\n",
+    "        \n",
+    "        directory = os.path.dirname(os.path.abspath(__file__))\n",
+    "\n",
+    "    except:\n",
+    "        \n",
+    "        ip = IPython.get_ipython()\n",
+    "        directory = None\n",
+    "        if '__vsc_ipynb_file__' in ip.user_ns:\n",
+    "            directory = os.path.dirname(ip.user_ns['__vsc_ipynb_file__'])\n",
+    "        \n",
+    "    return directory \n",
+    "\n",
+    "\n",
     "def salvar(a):\n",
-    "    with open(f'AWS/Gabriel/GroundState3/dados/{a}.pickle', 'wb') as f:\n",
-    "        pickle.dump(eval(a), f) \n",
+    "    \n",
+    "    script_dir = get_current_directory()\n",
+    "    \n",
+    "    dados_dir = os.path.join(script_dir, 'dados')\n",
+    "    \n",
+    "    os.makedirs(dados_dir, exist_ok=True)\n",
+    "    \n",
+    "    file_path = os.path.join(dados_dir, f'{a}.pickle')\n",
+    "    \n",
+    "    with open(file_path, 'wb') as f:\n",
+    "        pickle.dump(eval(a), f)\n",
     "\n",
     "def abrir(a):\n",
-    "    with open(f'AWS/Gabriel/GroundState3/dados/{a}.pickle', 'rb') as f:\n",
-    "        return pickle.load(f)\n",
     "    \n",
-    "def clifford_gate():\n",
-    "\n",
-    "   random_value = random.randint(0, 3)\n",
-    "   \n",
-    "   return RZGate(random_value*np.pi/2)\n",
+    "    script_dir = get_current_directory()\n",
+    "    \n",
+    "    file_path = os.path.join(script_dir, 'dados', f'{a}.pickle')\n",
+    "    \n",
+    "    with open(file_path, 'rb') as f:\n",
+    "        return pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def run_statevector(circuit, driver, mapper = JordanWignerMapper()):\n",
     "   \n",
@@ -355,7 +398,6 @@
     "   \n",
     "   return CXGate(), (control_qubit, target_qubit)\n",
     "\n",
-    " \n",
     "def crz_gate():\n",
     "   \n",
     "   random_value = random.randint(0, 3)\n",
