--- a/AWS/Gabriel/GroundState5 - H2 CDR 2500/analise.ipynb
+++ b/AWS/Gabriel/GroundState5 - H2 CDR 2500/analise.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "#Python Default \n",
@@ -1898,7 +1902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
