--- a/AWS/Gabriel/GroundState4 - CO2/CO2.ipynb
+++ b/AWS/Gabriel/GroundState4 - CO2/CO2.ipynb
@@ -120,14 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "\n",
+      "Num qubits: 30\n"
      ]
     }
    ],
@@ -144,14 +145,26 @@
     "\n",
     "mapper = JordanWignerMapper()\n",
     "\n",
-    "print(mapper.map(es_problem.second_q_ops()[0]).num_qubits)"
+    "print(f\"\\nNum qubits: {mapper.map(es_problem.second_q_ops()[0]).num_qubits}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "driver = PySCFDriver(\n",
     "    atom= f\"C 0 0 0; O 0 0 1.16; O 0 0 -1.16\",\n",
@@ -227,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
