--- a/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
+++ b/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
@@ -1172,23 +1172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'BackendProperties' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[175], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m brisbane_backend\u001b[38;5;241m.\u001b[39mproperties():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'BackendProperties' object is not iterable"
-     ]
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "brisbane_backend.properties()"
+    "brisbane_backend.configuration().max_experiments"
    ]
   },
   {
