--- a/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
+++ b/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
     "\n",
     "##Qiskit Runtime IBM\n",
     "\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService, Session, Options\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService, Session, Options, Batch\n",
     "\n",
     "## Braket\n",
     "\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
        " [array(-0.82892087), 2.8]]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,13 +1051,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "497d40a6101f49f298e0493f1712e3f8",
+       "model_id": "0effb02f5d1d4bbd8b9a8dac02a66913",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1095,46 +1095,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lambda = 1.1\tn:0, s:7\n",
-      "Lambda = 1.5450000000000002\tn:0, s:38\n",
-      "Lambda = 1.9900000000000002\tn:0, s:70\n",
-      "Lambda = 2.4350000000000005\tn:0, s:102\n",
-      "Lambda = 2.8800000000000003\tn:0, s:134\n",
-      "Lambda = 3.3250000000000006\tn:1, s:23\n",
-      "Lambda = 3.7700000000000005\tn:1, s:55\n",
-      "Lambda = 4.215\tn:1, s:86\n",
-      "Lambda = 4.66\tn:1, s:118\n",
-      "Lambda = 5.105\tn:2, s:7\n",
-      "Lambda = 5.550000000000001\tn:2, s:39\n",
-      "Lambda = 5.995000000000001\tn:2, s:71\n",
-      "Lambda = 6.440000000000001\tn:2, s:102\n",
-      "Lambda = 6.885000000000002\tn:2, s:134\n",
-      "Lambda = 7.33\tn:3, s:23\n",
-      "Lambda = 7.775\tn:3, s:55\n",
-      "Lambda = 8.22\tn:3, s:87\n",
-      "Lambda = 8.665000000000001\tn:3, s:119\n",
-      "Lambda = 9.110000000000001\tn:4, s:7\n",
-      "Lambda = 9.555000000000001\tn:4, s:39\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#zne_circuits_brisbane_2 = list(ZNE_transpile(circuito_ibm_brisbane, brisbane_backend, start = 1.1, end = 10, points = 20, verbose = 1))\n",
     "#salvar(\"zne_circuits_brisbane_2\")\n",
     "\n",
-    "zne_circuits_brisbane = abrir(\"zne_circuits_brisbane_2\")"
+    "zne_circuits_brisbane_2 = abrir(\"zne_circuits_brisbane_2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1172,30 +1145,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "300"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0 \t Lambda : 1.1 \t Task ID: ctsctkj66x8g008px48g\n",
+      "Index: 1 \t Lambda : 1.5450000000000002 \t Task ID: ctsctkt46w90008r5710\n",
+      "Index: 2 \t Lambda : 1.9900000000000002 \t Task ID: ctsctmaseb10008wvs60\n"
+     ]
+    },
+    {
+     "ename": "IBMRuntimeError",
+     "evalue": "'Failed to run program: \\'409 Client Error: Conflict for url: https://api.quantum.ibm.com/runtime/jobs. {\"errors\":[{\"message\":\"You have reached the limit of 3 pending  jobs. Please wait for a job to complete or cancel one before submitting anything new.\",\"code\":3458,\"solution\":\"Wait until some previous jobs were finished. You can cancel pending jobs to run new jobs.\",\"more_info\":\"https://docs.quantum-computing.ibm.com/errors\"}]}\\''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIBMRuntimeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m ultimo_index:\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m job \u001b[38;5;241m=\u001b[39m run_estimator_ibm(circuito_zne, es_problem, brisbane_backend, \u001b[38;5;241m2000\u001b[39m)\n\u001b[1;32m     12\u001b[0m job_id \u001b[38;5;241m=\u001b[39m job\u001b[38;5;241m.\u001b[39mjob_id()\n\u001b[1;32m     14\u001b[0m salvar_obj(job_id, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid_brisbane_Estimator_zne_2_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[6], line 26\u001b[0m, in \u001b[0;36mrun_estimator_ibm\u001b[0;34m(circuit, driver, backend, shots, mapper)\u001b[0m\n\u001b[1;32m     23\u001b[0m estimator\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mdefault_shots \u001b[38;5;241m=\u001b[39m shots\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m#job = estimator.run(circuit, mapper.map(hamiltoniano))\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m job \u001b[38;5;241m=\u001b[39m estimator\u001b[38;5;241m.\u001b[39mrun([(circuit, mapper\u001b[38;5;241m.\u001b[39mmap(hamiltoniano), [])])\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m job\n",
+      "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/qiskit_ibm_runtime/estimator.py:151\u001b[0m, in \u001b[0;36mEstimatorV2.run\u001b[0;34m(self, pubs, precision)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Submit a request to the estimator primitive.\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \n\u001b[1;32m    139\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    148\u001b[0m \n\u001b[1;32m    149\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    150\u001b[0m coerced_pubs \u001b[38;5;241m=\u001b[39m [EstimatorPub\u001b[38;5;241m.\u001b[39mcoerce(pub, precision) \u001b[38;5;28;01mfor\u001b[39;00m pub \u001b[38;5;129;01min\u001b[39;00m pubs]\n\u001b[0;32m--> 151\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_run(coerced_pubs)\n",
+      "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/qiskit_ibm_runtime/base_primitive.py:177\u001b[0m, in \u001b[0;36mBasePrimitiveV2._run\u001b[0;34m(self, pubs)\u001b[0m\n\u001b[1;32m    174\u001b[0m         runtime_options[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minstance\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backend\u001b[38;5;241m.\u001b[39m_instance\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service, QiskitRuntimeService):\n\u001b[0;32m--> 177\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service\u001b[38;5;241m.\u001b[39mrun(\n\u001b[1;32m    178\u001b[0m         program_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_program_id(),\n\u001b[1;32m    179\u001b[0m         options\u001b[38;5;241m=\u001b[39mruntime_options,\n\u001b[1;32m    180\u001b[0m         inputs\u001b[38;5;241m=\u001b[39mprimitive_inputs,\n\u001b[1;32m    181\u001b[0m         callback\u001b[38;5;241m=\u001b[39moptions_dict\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menvironment\u001b[39m\u001b[38;5;124m\"\u001b[39m, {})\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcallback\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[1;32m    182\u001b[0m         result_decoder\u001b[38;5;241m=\u001b[39mDEFAULT_DECODERS\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_program_id()),\n\u001b[1;32m    183\u001b[0m     )\n\u001b[1;32m    185\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_service\u001b[38;5;241m.\u001b[39mrun(\n\u001b[1;32m    186\u001b[0m     program_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_program_id(),  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[1;32m    187\u001b[0m     options\u001b[38;5;241m=\u001b[39mruntime_options,\n\u001b[1;32m    188\u001b[0m     inputs\u001b[38;5;241m=\u001b[39mprimitive_inputs,\n\u001b[1;32m    189\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda/envs/aws_braket_updated/lib/python3.12/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:884\u001b[0m, in \u001b[0;36mQiskitRuntimeService.run\u001b[0;34m(self, program_id, inputs, options, callback, result_decoder, session_id, start_session)\u001b[0m\n\u001b[1;32m    882\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ex\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m404\u001b[39m:\n\u001b[1;32m    883\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m RuntimeProgramNotFound(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProgram not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mex\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m--> 884\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m IBMRuntimeError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to run program: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    885\u001b[0m backend \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    886\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackend(name\u001b[38;5;241m=\u001b[39mresponse[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbackend\u001b[39m\u001b[38;5;124m\"\u001b[39m], instance\u001b[38;5;241m=\u001b[39mhgp_name)\n\u001b[1;32m    887\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbackend\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    888\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m qrt_options\u001b[38;5;241m.\u001b[39mget_backend_name()\n\u001b[1;32m    889\u001b[0m )\n\u001b[1;32m    891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m version \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n",
+      "\u001b[0;31mIBMRuntimeError\u001b[0m: 'Failed to run program: \\'409 Client Error: Conflict for url: https://api.quantum.ibm.com/runtime/jobs. {\"errors\":[{\"message\":\"You have reached the limit of 3 pending  jobs. Please wait for a job to complete or cancel one before submitting anything new.\",\"code\":3458,\"solution\":\"Wait until some previous jobs were finished. You can cancel pending jobs to run new jobs.\",\"more_info\":\"https://docs.quantum-computing.ibm.com/errors\"}]}\\''"
+     ]
     }
    ],
    "source": [
-    "brisbane_backend.configuration().max_experiments"
+    "with Batch(backend=brisbane_backend):\n",
+    "\n",
+    "    for index, (circuito_zne, lambda_value) in enumerate(zne_circuits_brisbane_2):\n",
+    "        \n",
+    "        ultimo_index = 2\n",
+    "        \n",
+    "        if index <= ultimo_index:\n",
+    "            continue\n",
+    "        \n",
+    "        job = run_estimator_ibm(circuito_zne, es_problem, brisbane_backend, 2000)\n",
+    "        \n",
+    "        job_id = job.job_id()\n",
+    "\n",
+    "        salvar_obj(job_id, f\"id_brisbane_Estimator_zne_2_{index}\")\n",
+    "        \n",
+    "        print(f\"Index: {index} \\t Lambda : {lambda_value} \\t Task ID: {job_id}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
