--- a/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
+++ b/AWS/Gabriel/GroundState7 - AWS - ZNE/main.ipynb
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1416,10 +1416,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo : linear\n",
+      "Valor no zero : -0.8739\n",
+      "Modelo : exponential\n",
+      "Valor no zero : -1.0733\n",
+      "Modelo : polynomial\n",
+      "Valor no zero : -0.9112\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data, values in extrapolated_values.items():\n",
+    "    \n",
+    "    print(f\"Modelo : {data}\")\n",
+    "    \n",
+    "    print(f\"Valor no zero : {values['valor no zero']:.4f}\")"
+   ]
   },
   {
    "cell_type": "code",
